--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,40 @@
 .container {
-  border: 5px solid #0786f5;
-  background-color: #5db0f8ee;
   display: grid;
-  grid-template-rows: 100px 200px;
-  grid-auto-columns: 150px;
+  grid-template-rows: 200px 200px 200px;
   grid-auto-flow: column;
-  /* row-gap: 15px;
-  column-gap: 20px; */
-  gap: 40px;
+  grid-auto-columns: 200px;
+  gap: 20px;
+  justify-content: center;
+  align-content: center;
+  width: 100%;
+  height: 100vh;
 }
 
 .item {
-  border: 5px solid #ea6262;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  box-sizing: border-box;
+  padding: 8px;
   font-size: 80px;
+  font-weight: bold;
+  font-family: Arial, sans-serif;
+  color: #fff;
+  width: 200px;
+  height: 200px;
+}
+
+.item-1,
+.item-4 {
+  background-color: #acd900;
+}
+
+.item-2,
+.item-5 {
+  background-color: #71bb05;
+}
+
+.item-3,
+.item-6 {
+  background-color: #268201;
 }
