--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,26 @@
 .container {
   display: grid;
-  grid-template-rows: 200px 200px 200px;
-  grid-auto-flow: column;
-  grid-auto-columns: 200px;
-  gap: 20px;
-  justify-content: center;
-  align-content: center;
-  width: 100%;
-  height: 100vh;
+  grid-template-columns: 200px 200px 200px;
+  grid-auto-rows: 200px;
+  gap: 15px;
+  /* justify-content: center; */
+  /* align-content: center; */
+  place-content: end center;
+  /* justify-items: center; */
+  /* align-items: center; */
+  place-items: start center;
+  border: 5px solid royalblue;
+  background-color: aquamarine;
+  height: 600px;
 }
 
 .item {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  box-sizing: border-box;
-  padding: 8px;
+  border: 5px solid darkmagenta;
   font-size: 80px;
-  font-weight: bold;
-  font-family: Arial, sans-serif;
-  color: #fff;
-  width: 200px;
-  height: 200px;
 }
 
-.item-1,
-.item-4 {
-  background-color: #acd900;
-}
-
-.item-2,
-.item-5 {
-  background-color: #71bb05;
-}
-
-.item-3,
-.item-6 {
-  background-color: #268201;
+.item-1 {
+  /* justify-self: end; */
+  /* align-self: center; */
+  place-self: start stretch;
 }
