--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,37 @@
-.main-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-}
-
 .grid-container {
   display: grid;
-  grid-template-columns: 200px 200px;
-  grid-template-rows: 200px 200px;
-  gap: 50px;
-  position: relative;
-  width: 450px;
-  height: 450px;
-  background-color: #3a630d;
+  width: 100%;
+  height: 100vh;
+  border: 5px solid lightcoral;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 10% 1fr 1fr;
+  grid-template-areas:
+    "header header header"
+    "side main main"
+    "side main main";
 }
 
 .item {
-  display: grid;
-  place-items: end;
-  background-color: #add901;
+  font-size: 2rem;
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.box {
-  background-color: #61a81e;
-  width: 55px;
-  height: 90px;
+.item-1 {
+  grid-area: header;
+  /* grid-column-start: 1; */
+  /* grid-column-end: 4; */
+  background-color: crimson;
 }
 
-.square {
-  position: absolute;
-  inset: 0;
-  margin: auto;
-  background-color: #1f3206;
-  width: 50px;
-  height: 50px;
+.item-2 {
+  grid-area: side;
+  /* grid-row: 2 / 4; */
+  background-color: aquamarine;
+}
+
+.item-3 {
+  grid-area: main;
+  /* grid-area: 2 / 2 / 4 / 4; */
+  background-color: springgreen;
 }
