--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,20 @@
 .grid-container {
   display: grid;
-  width: 100%;
+  grid-template-columns: repeat(3, 250px);
+  grid-auto-rows: 250px;
+  place-content: center;
+  gap: 20px;
   height: 100vh;
-  border: 5px solid lightcoral;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 10% 1fr 1fr;
-  grid-template-areas:
-    "header header header"
-    "side main main"
-    "side main main";
 }
 
-.item {
-  font-size: 2rem;
-  color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.item-1 {
-  grid-area: header;
-  /* grid-column-start: 1; */
-  /* grid-column-end: 4; */
-  background-color: crimson;
-}
-
-.item-2 {
-  grid-area: side;
-  /* grid-row: 2 / 4; */
-  background-color: aquamarine;
-}
-
+.item-2,
 .item-3 {
-  grid-area: main;
-  /* grid-area: 2 / 2 / 4 / 4; */
-  background-color: springgreen;
+  grid-column: span 2;
+}
+
+img {
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
