--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,12 @@
-.grid-container {
+.container {
   display: grid;
-  grid-template-columns: repeat(3, 250px);
-  grid-auto-rows: 250px;
-  place-content: center;
-  gap: 20px;
-  height: 100vh;
+  /* grid-template-columns: repeat(3, minmax(10px, 300px)); */
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: repeat(3, auto);
+  border: 5px solid hotpink;
 }
 
-.item-2,
-.item-3 {
-  grid-column: span 2;
-}
-
-img {
-  border-radius: 20px;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.item {
+  border: 5px solid greenyellow;
+  font-size: 2rem;
 }
