--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,23 @@
 .container {
   display: grid;
-  /* grid-template-columns: repeat(3, minmax(10px, 300px)); */
-  grid-template-columns: repeat(3, auto);
-  grid-template-rows: repeat(3, auto);
-  border: 5px solid hotpink;
+  /* grid-template-columns: repeat(4, 1fr); */
+  /* grid-template-columns: 1fr 3fr min-content max-content; */
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  border: 5px solid #e1bee7;
+  background-color: #fff1ff;
+}
+
+.container-2 {
+  display: grid;
+  /* grid-template-columns: repeat(4, 1fr); */
+  /* grid-template-columns: 1fr 3fr min-content max-content; */
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  margin-top: 100px;
+  border: 5px solid #e1bee7;
+  background-color: #fff1ff;
 }
 
 .item {
-  border: 5px solid greenyellow;
+  border: 5px solid #00bcd4;
   font-size: 2rem;
 }
