--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
   place-items: center;
   gap: 100px;
   margin-bottom: 40px;
+  border-bottom: 1px solid #ddd;
 }
 
 .banner__text-container {
@@ -30,7 +31,6 @@ body {
   font-size: 5rem;
   font-weight: bold;
   color: #022430;
-  /* width: 250px; */
 }
 
 .banner__paragraph {
@@ -39,7 +39,6 @@ body {
 }
 
 .banner__button {
-  align-self: flex-start;
   border: none;
   border-radius: 20px;
   padding: 8px;
@@ -47,6 +46,11 @@ body {
   color: #fff;
   width: 180px;
   background-color: #f98a47;
+}
+
+.banner__icon-container {
+  display: flex;
+  gap: 20px;
 }
 
 .banner__image {
@@ -157,11 +161,11 @@ body {
 
 @media (width < 720px) {
   .banner__text-container {
-    text-align: center;
+    align-items: center;
   }
 
-  .banner__button {
-    align-self: center;
+  .banner__text-container {
+    text-align: center;
   }
 }
 
